<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".equipment.EquipmentFragment">

        <Button
            android:id="@+id/btnAFCS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAFCS"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/btnDBCS"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDBCS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnDBCS"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/btnAFSM"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/btnAFCS" />

        <Button
            android:id="@+id/btnAFSM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAFSM"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/btnAPBS"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/btnDBCS" />

        <Button
            android:id="@+id/btnAPBS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAPBS"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/btnSSM"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/btnAFSM" />

        <Button
            android:id="@+id/btnSSM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSSM"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/btnOthers"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/btnAPBS" />

        <Button
            android:id="@+id/btnOthers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnOthers"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/btnSSM" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>