<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MiscEquipIdFragment">

        <ScrollView
            android:id="@+id/scrollViewMach"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guidelineMachV4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineMachV3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonMisc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/buttonMisc1"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonMisc2"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineMachV4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guidelineMachV3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="103dp" />

                <Button
                    android:id="@+id/buttonMisc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/buttonMisc2"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonMisc3"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineMachV4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guidelineMachV3"
                    app:layout_constraintTop_toBottomOf="@+id/buttonMisc1" />

                <Button
                    android:id="@+id/buttonMisc3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/buttonMisc3"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonMisc4"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineMachV4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guidelineMachV3"
                    app:layout_constraintTop_toBottomOf="@+id/buttonMisc2" />

                <Button
                    android:id="@+id/buttonMisc4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/buttonMisc4"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonMiscCancel"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineMachV4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guidelineMachV3"
                    app:layout_constraintTop_toBottomOf="@+id/buttonMisc3"
                    tools:layout_editor_absoluteX="103dp" />

                <Button
                    android:id="@+id/buttonMiscCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="@color/design_default_color_error"
                    android:text="@string/btnCancel"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineMachV4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guidelineMachV3"
                    app:layout_constraintTop_toBottomOf="@+id/buttonMisc4"
                    tools:layout_editor_absoluteX="103dp" />

            </LinearLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMachV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMachV4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>