<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="logViewModel"
            type="com.rayko.maintenancecalllog.log.LogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".log.LogFragment">

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/log_list"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/btnLogExit"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/btnDetail"-->
<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />-->

        <ScrollView
            android:id="@+id/logScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnDetail"
            app:layout_constraintBottom_toTopOf="@id/btnLogExit">

            <TextView
                android:id="@+id/logText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{logViewModel.logResult}" />
        </ScrollView>

        <Button
            android:id="@+id/btnDetail"
            style="@style/Button2"
            android:text="@string/buttonDetail"
            android:enabled="@{logViewModel.btnDetailVisible}"
            app:layout_constraintEnd_toEndOf="@id/logGuide4"
            app:layout_constraintStart_toStartOf="@id/logGuide3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnStop"
            style="@style/Button2"
            android:text="@string/buttonStop"
            android:enabled="@{logViewModel.btnStopVisible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/logGuide1"
            app:layout_constraintEnd_toEndOf="@id/logGuide2"/>

        <Button
            android:id="@+id/btnLogExit"
            style="@style/Button2"
            android:text="@string/buttonExit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/logGuide3"
            app:layout_constraintEnd_toEndOf="@id/logGuide4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/logGuide1"
            style="@style/Guideline1"
            app:layout_constraintGuide_percent=".15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/logGuide2"
            style="@style/Guideline1"
            app:layout_constraintGuide_percent="0.43" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/logGuide3"
            style="@style/Guideline1"
            app:layout_constraintGuide_percent=".57" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/logGuide4"
            style="@style/Guideline1"
            app:layout_constraintGuide_percent="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>